--- a/client/my-app/public/index.html
+++ b/client/my-app/public/index.html
@@ -2,13 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <link rel="icon" type="image/x-icon" href="/socksIcon.jpg">
-
-    <title>FlyNow
-    </title>
+    <link rel="icon" type="image/x-icon" href="/plane.png">
+    <title>FlyNow</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
