--- a/client/my-app/public/index.html
+++ b/client/my-app/public/index.html
@@ -9,7 +9,7 @@
   <title>FlyNow</title>
 </head>
 
-<body>
+<body  style="background-image: url(Hawaii.jpg)">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
 
